[package]
name = "stability_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-native-tls = { version = "0.5.0", default-features = false, features = ["runtime-tokio"] }
bytes = "1.4.0"
comparable = { version = "0.5.4", features = ["derive"] }
futures-util = "0.3.28"
http-body = "1.0.0-rc.2"
http-body-util = "0.1.0-rc.3"
hyper = { version = "1.0.0-rc.4", features = ["full"] }
pin-project-lite = "0.2.13"
serde = { version = "1.0.188", features = ["derive"] }
serde_bytes = "0.11.12"
serde_json = "1.0.105"
thiserror = "1.0.47"
tokio = { version = "1.32.0", features = ["full"] }
