[package]
name = "stability_rs"
version = "0.1.0"
edition = "2021"
description = "A Rust library for the Stability API"
authors = ["rwxbytes <rwxbytes@proton.me>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/rwxbytes/stability_rs"
keywords = ["stability", "stable-diffusion", "txt2img", "ai", "img2img"]


[dependencies]
async-native-tls = { version = "0.5.0", default-features = false, features = ["runtime-tokio"] }
base64 = "0.21.3"
bytes = "1.4.0"
comparable = { version = "0.5.4", features = ["derive"] }
futures-util = "0.3.28"
http-body = "1.0.0-rc.2"
http-body-util = "0.1.0-rc.3"
hyper = { version = "1.0.0-rc.4", features = ["full"] }
pin-project-lite = "0.2.13"
rand = "0.8.5"
serde = { version = "1.0.188", features = ["derive"] }
serde_bytes = "0.11.12"
serde_json = "1.0.105"
thiserror = "1.0.47"
tokio = { version = "1.32.0", features = ["full"] }
